# infat

./: .gitignore  CHANGELOG.md  Cargo.toml  Package.swift  README.md  flake.nix  justfile
.config/: common.ncl  dev.ncl  project.ncl
.config/ci/release/: generate_tool.cue  github-ci.cue  github.actions.workflow.schema.cue  release.sh  repo-install.sh  workflows.cue
.github/workflows/: release.yml
Completions/: _infat  infat  infat.fish
Sources/: AssociationManager.swift  Common.swift  ConfigManager.swift  ConformanceTypes.swift  Error.swift  FileSystemUtilities.swift  FileUTIInfo.swift  infat.swift  main.swift
Sources/Commands/: Bind.swift  Info.swift  Init.swift  List.swift  Set.swift
cue.mod/: module.cue
infat-cli/: Cargo.toml  build.rs
infat-cli/src/: cli.rs  main.rs
infat-lib/: Cargo.toml
infat-lib/src/: app.rs  association.rs  config.rs  error.rs  lib.rs  uti.rs
infat-lib/src/macos/: ffi.rs  launch_services.rs  launch_services_db.rs  workspace.rs
