# Cargo.toml
[workspace]
members = [
    "infat-lib",
    "infat-cli",
]
resolver = "2"

[workspace.dependencies]
# CLI and config
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

# Error handling
thiserror = "1.0"
eyre = "0.6"
color-eyre = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# macOS system integration
core-foundation = "0.10"
core-services = "0.2"
