# infat-cli/Cargo.toml
[package]
name = "infat-cli"
version = "3.0.2"
edition = "2024"
description = "Command-line interface for infat"
license = "MIT"

[[bin]]
name = "infat"
path = "src/main.rs"

[dependencies]
infat-lib = { path = "../infat-lib" }
clap = { workspace = true }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
eyre = { workspace = true }
color-eyre = { workspace = true }
tracing = { workspace = true }
clap_complete = "4.5.58"
nerdicons_rs = "0.1.0"

[build-dependencies]
clap_complete = "4.5.58"
infat-lib = { path = "../infat-lib" }
clap = { workspace = true }

