[package]
name = "infat-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
# Error handling
thiserror = "1.0"
eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization  
serde = { version = "1.0", features = ["derive"] }
toml = { workspace = true }
plist = "1.6"

# System
dirs = "5.0"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS system integration
core-foundation = "0.9"
core-foundation-sys = "0.8" 
libc = "0.2"

# Objective-C bindings
objc = "0.2"
objc-foundation = "0.1"
